<?xml version="1.0"?>
<package format="3">
  <name>task01</name>
  <version>0.0.0</version>
  <description>Task 1 package with receiver node.</description>
  <maintainer email="denksworkspace@gmail.com">denk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
