<?xml version="1.0"?>
<package format="3">
  <name>task02</name>
  <version>0.0.0</version>
  <description>Task 2 publish a message.</description>
  <maintainer email="denksworkspace@gmail.com">denk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
